Some meta info changes, improve navlink contrast, fixes nonconsistent line height in hero section

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -104,6 +104,9 @@ p {
     margin-top: 2px !important;
     margin-bottom: 2px !important;
 }
+span {
+    line-height: 1.8rem;
+}
 
 blockquote {
     border-left: 3px solid;
@@ -140,7 +143,7 @@ strong {
 
 a {
     color: inherit;
-    opacity: 0.7;
+    opacity: 0.73;
     transition: all 100ms ease-in;
     @apply underline decoration-1 decoration-gray-400 underline-offset-4
 }
